Update JDK to JDK 25 (#2957)