@@ -53,7 +53,7 @@ public class ComponentConsistencyComplianceTest
 
     private ArchCondition<JavaClass> overrideSupertypeMethodsWhichReturnsTheirDeclaringClass()
     {
-        return new ArchCondition<JavaClass>("Overrides supertype methods which returns their declaring class")
+        return new ArchCondition<>("Overrides supertype methods which returns their declaring class")
         {
             @Override
             public void check(JavaClass item, ConditionEvents events)
@@ -65,7 +65,7 @@ public class ComponentConsistencyComplianceTest
                         .filter(this::isRootDeclaration)
                         // Methods that return the class they are defined in
                         .filter(m -> m.getRawReturnType().getFullName().equals(m.getOwner().getFullName()))
-                        .collect(Collectors.toList());
+                        .toList();
 
                 // The method may exist but have a diff return type, or it may not be overridden
                 for (JavaMethod supertypeMethodReturningDeclClass : supertypeMethodsReturningDeclClass)
